--- a/views/mission-detail.ejs
+++ b/views/mission-detail.ejs
@@ -19,6 +19,7 @@
         </div>
         <div class="flex gap-sm">
             <button class="btn btn-warning" id="abortMission">Abort Mission</button>
+            <button class="btn btn-ghost" id="updateAtcSlot" style="display: none;">Update ATC Slot</button>
             <button class="btn btn-success" id="approveMission">Approve</button>
         </div>
     </div>
@@ -74,6 +75,22 @@
                     <div class="detail-row">
                         <span class="detail-label">Started</span>
                         <span class="detail-value" id="startedAt">--</span>
+                    </div>
+                    <div class="detail-row">
+                        <span class="detail-label">ATC Requested</span>
+                        <span class="detail-value" id="atcRequested">--</span>
+                    </div>
+                    <div class="detail-row">
+                        <span class="detail-label">ATC Scheduled</span>
+                        <span class="detail-value" id="atcScheduled">--</span>
+                    </div>
+                    <div class="detail-row">
+                        <span class="detail-label">ATC Delay</span>
+                        <span class="detail-value" id="atcDelay">--</span>
+                    </div>
+                    <div class="detail-row">
+                        <span class="detail-label">Reservation Expires</span>
+                        <span class="detail-value" id="atcExpires">--</span>
                     </div>
                     <div class="detail-row">
                         <span class="detail-label">Distance</span>
